--- a/myproject/Views/Home/Register.cshtml
+++ b/myproject/Views/Home/Register.cshtml
@@ -1,9 +1,10 @@
 @{
     ViewData["Title"] = "Home Page";
 }
+<section class="h-100 h-custom" style="background-color: #8fc4b7;">
 <form>
-  
-  
+
+  <h1> Register Here </h1>
   <div class="w-25 p-3">
   <div class="mb-3">
     <label for="exampleInputFname" class="form-label">First Name</label>
@@ -57,7 +58,7 @@
     <input type="file" class="form-control" id="exampleInputcertificate1" >
   </div>
   
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn btn-primary">Register Now</button>
   
   </div>
 
