--- a/myproject/Views/Home/Register.cshtml
+++ b/myproject/Views/Home/Register.cshtml
@@ -1,10 +1,14 @@
 @{
     ViewData["Title"] = "Home Page";
 }
+
+<div class="shadow-lg p-3 mb-5 bg-body-tertiary rounded">
 <section class="h-100 h-custom" style="background-color: #8fc4b7;">
 <form>
-
-  <h1> Register Here </h1>
+    <div class="row d-flex justify-content-center align-items-center h-100">
+   <center>
+   <h1> Register Here </h1></center>
+  
   <div class="w-25 p-3">
   <div class="mb-3">
     <label for="exampleInputFname" class="form-label">First Name</label>
@@ -60,6 +64,6 @@
   
   <button type="submit" class="btn btn-primary">Register Now</button>
   
-  </div>
+  </div></div>
 
 </form>
