--- a/myproject/Views/Home/Login.cshtml
+++ b/myproject/Views/Home/Login.cshtml
@@ -1,48 +1,10 @@
 @{
     ViewData["Title"] = "Home Page";
 }
+
+
 <section class="vh-100 gradient-custom">
-
-<div class="text center">
-
-<h1> Login </h1></div>
-
-<div class="bg-info">
-
-<form>
-
  
-  <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-  <div class="w-25 p-3">
-  <div class="mb-3">
-    
-    <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
-              <p class="text-white-50 mb-5">Please enter your login and password!</p>
-    <label for="exampleInputEmail1" class="form-label">Email</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-    <div id="emailHelp" class="form-text"></div>
-  </div>
-  <div class="mb-3">
-    <label for="exampleInputPassword1" class="form-label">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1">
-  </div>
-  <div class="mb-3 form-check">
-    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">Check me out</label>
-  </div>
-
-<p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p>
-
-  <button type="submit" class="btn btn-primary">Submit</button>
-  
-  </div>
-  </div>
-
-</form>
-
-</div>
-@* <section class="vh-100 gradient-custom">
-  <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-12 col-md-8 col-lg-6 col-xl-5">
         <div class="card bg-dark text-white" style="border-radius: 1rem;">
@@ -54,25 +16,23 @@
               <p class="text-white-50 mb-5">Please enter your login and password!</p>
 
               <div class="form-outline form-white mb-4">
-                <input type="email" id="typeEmailX" class="form-control form-control-lg" />
+                
                 <label class="form-label" for="typeEmailX">Email</label>
+                <input type="email" id="typeEmailX" class="form-control form-control-lg" />
+                
               </div>
 
               <div class="form-outline form-white mb-4">
+                  <label class="form-label" for="typePasswordX">Password</label>
                 <input type="password" id="typePasswordX" class="form-control form-control-lg" />
-                <label class="form-label" for="typePasswordX">Password</label>
+          
               </div>
 
               <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p>
 
               <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
 
-              <div class="d-flex justify-content-center text-center mt-4 pt-1">
-                <a href="#!" class="text-white"><i class="fab fa-facebook-f fa-lg"></i></a>
-                <a href="#!" class="text-white"><i class="fab fa-twitter fa-lg mx-4 px-2"></i></a>
-                <a href="#!" class="text-white"><i class="fab fa-google fa-lg"></i></a>
-              </div>
-
+              
             </div>
 
             <div>
@@ -85,5 +45,6 @@
       </div>
     </div>
   </div>
-</section><br>
-<br><br><br><br> *@
+</section>
+</div><br>
+<br><br><br><br>
