--- a/myproject/Views/Home/Register.cshtml
+++ b/myproject/Views/Home/Register.cshtml
@@ -5,9 +5,14 @@
 <div class="shadow-lg p-3 mb-5 bg-body-tertiary rounded">
 <section class="h-100 h-custom" style="background-color: #8fc4b7;">
 <form>
-    <div class="row d-flex justify-content-center align-items-center h-100">
+    
    <center>
    <h1> Register Here </h1></center>
+  <div class="shadow-lg p-3 mb-5 bg-body-tertiary rounded">
+  
+
+  
+  <div class="row d-flex justify-content-center align-items-center h-100">
   
   <div class="w-25 p-3">
   <div class="mb-3">
@@ -64,6 +69,6 @@
   
   <button type="submit" class="btn btn-primary">Register Now</button>
   
-  </div></div>
+  </div></div></div>
 
 </form>
