--- a/myproject/Views/Home/Index.cshtml
+++ b/myproject/Views/Home/Index.cshtml
@@ -2,11 +2,17 @@
     ViewData["Title"] = "Home Page";
 }
 
-<header> 
-        <h1>Job Search Portal</h1> 
-    
+
+<head> <title>Jop Portal </title></head>
+    <div class="shadow-lg p-3 mb-5 bg-body-tertiary rounded">
     <section class="search"> 
+        
+
+         <center>
+
         <h2>Find Your Dream Job</h2> 
+        <br>
+        
         <form action="#" method="get"> 
             <input type="text" name="keywords" 
                 placeholder="Keywords"> 
@@ -14,32 +20,65 @@
                 placeholder="Location"> 
             <input type="text" name="company" 
                 placeholder="Company"> 
-            <button type="submit"> 
-                Search 
-            </button> 
-        </form> 
+            
+       <button type="submit" class="btn btn-warning">Search </button>
+            
+        </form> </div>
     </section> 
   
     <section class="job-listings"> 
-        <h2>Latest Job Listings</h2> 
-        <ul> 
-            <li> 
+        <center>
+        <h2>Latest Job Listings</h2>
+        <br>
+        <br> 
+        <div class="container">
+        
+        <div class="row gx-5">
+  
+  
+  <div class="col">
+           
                 <h3>Web Developer</h3> 
                 <p>Company: ABC Tech</p> 
                 <p>Location: India</p> 
                 <p>Description: Good Web Developer</p> 
                 <a href="#">Apply Now</a> 
-            </li> 
-            <li> 
+             </div>
+             
+             <div class="col">
+           
                 <h3>Graphic Designer</h3> 
                 <p>Company: XYZ Design</p> 
                 <p>Location: India </p> 
                 <p>Description:Good Graphic Designer</p> 
                 <a href="#">Apply Now</a> 
-            </li> 
-        </ul> 
-    </section> 
+           </div>
+       
+       <div class="col">
+           
+                <h3>Data Scientist</h3> 
+                <p>Company: XYZ Design</p> 
+                <p>Location: India </p> 
+                <p>Description:Good Graphic Designer</p> 
+                <a href="#">Apply Now</a> 
+            </div>
+
+           <div class="col">
+         
+                <h3>Software Tester</h3> 
+                <p>Company: XYZ Design</p> 
+                <p>Location: India </p> 
+                <p>Description:Good Graphic Designer</p> 
+                <a href="#">Apply Now</a> 
+             </div>
+
+        </div> 
+    </section>
+    <br>
+    <br> 
+     <br> 
+      <br><br> 
       
-    <footer> 
-        <p>© 2023 Job Search Portal</p> 
-    </footer> 
+      
+      
+    
