--- a/myproject/Views/Shared/_Layout.cshtml
+++ b/myproject/Views/Shared/_Layout.cshtml
@@ -30,8 +30,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Companies">Companies</a>
                         </li>
 
-                        <button type="button" class="btn btn-info" data-bs-toggle="button" autocomplete="off">Login</button>
-
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Login">Login</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Register">Register</a>
                         </li>
