--- a/myproject/Views/Home/Login.cshtml
+++ b/myproject/Views/Home/Login.cshtml
@@ -1,5 +1,5 @@
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Login Page";
 }
 
 
@@ -11,6 +11,7 @@
           <div class="card-body p-5 text-center">
 
             <div class="mb-md-5 mt-md-4 pb-5">
+            <form action="VerifyLogin" method="Post">
 
               <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
               <p class="text-white-50 mb-5">Please enter your login and password!</p>
@@ -18,13 +19,13 @@
               <div class="form-outline form-white mb-4">
                 
                 <label class="form-label" for="typeEmailX">Email</label>
-                <input type="email" id="typeEmailX" class="form-control form-control-lg" />
+                <input type="text" name="Email" id="typeEmailX" class="form-control form-control-lg" />
                 
               </div>
 
               <div class="form-outline form-white mb-4">
                   <label class="form-label" for="typePasswordX">Password</label>
-                <input type="password" id="typePasswordX" class="form-control form-control-lg" />
+                <input type="password" name="Password" id="typePasswordX" class="form-control form-control-lg" />
           
               </div>
 
@@ -32,7 +33,7 @@
 
               <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
 
-              
+            </form> 
             </div>
 
             <div>
