--- a/myproject/Views/Home/Index.cshtml
+++ b/myproject/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
         <h2>Find Your Dream Job</h2> 
         <br>
         
-        <form action="#" method="get"> 
+        <form action="" method="get"> 
             <input type="text" name="keywords" 
                 placeholder="Keywords"> 
             <input type="text" name="location" 
