--- a/demoproject/Views/Shared/_Layout.cshtml
+++ b/demoproject/Views/Shared/_Layout.cshtml
@@ -6,7 +6,8 @@
     <title>@ViewData["Title"] - demoproject</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/demoproject.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/demoproject.style.css" asp-append-version="true" />
+    
 </head>
 <body>
     <header>
@@ -25,15 +26,19 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Login">Login</a>
+                        </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
     <div class="container">
-        <main role="main" class="pb-3">
+        
             @RenderBody()
-        </main>
+   
     </div>
 
     <footer class="border-top footer text-muted">
